add initia feature implementation

--- a/src/main/resources/application-remote.properties
+++ b/src/main/resources/application-remote.properties
@@ -1,4 +1,4 @@
-server.port= 9090
+server.port= 9099
 
 # Database properties
 spring.datasource.url=${DRONE_DATASOURCE_URL}
@@ -6,3 +6,11 @@ spring.datasource.username=${DRONE_DATASOURCE_USERNAME}
 spring.datasource.password=${DRONE_DATASOURCE_PASSWORD}
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= create
+
+spring.h2.console.enabled=true
+# default path: h2-console
+spring.h2.console.path=/h2-ui
