--- a/src/main/resources/application-remote.properties
+++ b/src/main/resources/application-remote.properties
@@ -11,6 +11,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= create
 
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
