--- a/src/main/resources/application-remote.properties
+++ b/src/main/resources/application-remote.properties
@@ -9,7 +9,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
