--- a/src/main/resources/application-remote.properties
+++ b/src/main/resources/application-remote.properties
@@ -17,4 +17,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.h2.console.enabled=true
 # default path: h2-console
-spring.h2.console.path=/h2-ui
+spring.h2.console.path=/the_drone
